added placeholder for api key

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyDntzHCeZv1DnAQvnm6mLBWlohw3YuNTDw",
+    apiKey: "put your api key here",
     authDomain: "ionicfirebasechat-a9af1.firebaseapp.com",
     databaseURL: "https://ionicfirebasechat-a9af1.firebaseio.com",
     projectId: "ionicfirebasechat-a9af1",
